# csc-212-term-project

./: FractalMaker.cpp  FractalMaker.h  README.md  main.cpp
CSC212_term_project/: CMakeLists.txt  FractalMaker.cpp  FractalMaker.h  main.cpp
